// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sku-webpack-plugin build should create valid app 1`] = `
"<!doctype html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta
      name="viewport"
      content="width=device-width,initial-scale=1"
    >
    <script
      defer="defer"
      src="main.js"
    >
    </script>
    <link
      href="main.css"
      rel="stylesheet"
    >
  </head>
  <body>
  </body>
</html>"
POST HYDRATE DIFFS: 
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -20,5 +20,18 @@
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#F7F8FB}
+            html._18zh09qz,html._18zh09qz body{color-scheme:dark;background:#0E131B}
+      </style>
+      <div class="dmx3na0 u59kha18 u59kha1b">
+        <div class="wy3wa10 _18zh09q76 _18zh09q66 _18zh09q96 _18zh09q86 _18zh09q5a u59kha18 u59kha1b _18zh09q32 _18zh09q35">
+          <span class="wy3wa10 _18zh09q4u u59kha0 u59kha1 u59kha21 _1d0g9qk4 u59khad">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file

`;

exports[`sku-webpack-plugin build should generate the expected files 1`] = `
{
  "index.html": "<!doctype html><html><head><meta charset="utf-8"><title>Webpack App</title><meta name="viewport" content="width=device-width,initial-scale=1"><script defer="defer" src="main.js"></script><link href="main.css" rel="stylesheet"></head><body></body></html>",
  "main.css": .wy3wa10 {
  -webkit-tap-highlight-color: transparent;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
}
[data-braid-hidefocusrings] .wy3wa10 {
  outline: none;
}
.wy3wa11 {
  display: block;
}
.wy3wa12 {
  line-height: 1;
}
.wy3wa13 {
  list-style: none;
}
.wy3wa14 {
  quotes: none;
}
.wy3wa14:after,
.wy3wa14:before {
  content: "";
}
.wy3wa15 {
  border-collapse: collapse;
  border-spacing: 0;
}
.wy3wa16 {
  -webkit-appearance: none;
  appearance: none;
}
.wy3wa17 {
  background-color: transparent;
}
.wy3wa19 {
  color: inherit;
}
.wy3wa1a:disabled {
  opacity: 1;
}
.wy3wa1a::-ms-expand {
  display: none;
}
.wy3wa1c[type="number"] {
  -moz-appearance: textfield;
}
.wy3wa1c[type="number"]::-webkit-inner-spin-button,
.wy3wa1c[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
.wy3wa1c::-ms-clear {
  display: none;
}
.wy3wa1c::-webkit-search-cancel-button {
  -webkit-appearance: none;
}
.wy3wa1f {
  color: inherit;
  text-decoration: none;
}
._1d0g9qk4 {
  font-size: var(--_1d0g9qk0);
  line-height: var(--_1d0g9qk1);
}
._1d0g9qk4:before {
  content: "";
  display: table;
  margin-bottom: var(--_1d0g9qk2);
}
._1d0g9qk4:after {
  content: "";
  display: table;
  margin-top: var(--_1d0g9qk3);
}
._18zh09q0 {
  overflow: hidden;
}
._18zh09q1 {
  overflow: scroll;
}
._18zh09q2 {
  overflow: visible;
}
._18zh09q3 {
  overflow: auto;
}
._18zh09q4 {
  -webkit-user-select: none;
  -ms-user-select: none;
  user-select: none;
}
._18zh09q5 {
  outline: none;
}
._18zh09q6 {
  opacity: 0;
}
._18zh09q7 {
  z-index: 0;
}
._18zh09q8 {
  z-index: 1;
}
._18zh09q9 {
  z-index: 2;
}
._18zh09qa {
  z-index: 90;
}
._18zh09qb {
  z-index: 100;
}
._18zh09qc {
  z-index: 200;
}
._18zh09qd {
  z-index: 290;
}
._18zh09qe {
  z-index: 300;
}
._18zh09qf {
  z-index: 400;
}
._18zh09qg {
  cursor: default;
}
._18zh09qh {
  cursor: pointer;
}
._18zh09qi {
  pointer-events: none;
}
._18zh09qj {
  top: 0;
}
._18zh09qk {
  bottom: 0;
}
._18zh09ql {
  left: 0;
}
._18zh09qm {
  right: 0;
}
._18zh09qn {
  height: 100%;
}
._18zh09qo {
  height: var(--d4g76u8);
}
._18zh09qp {
  width: 100%;
}
._18zh09qq {
  width: var(--d4g76u8);
}
._18zh09qr {
  min-width: 0;
}
._18zh09qs {
  max-width: var(--d4g76uz);
}
._18zh09qt {
  max-width: var(--d4g76u10);
}
._18zh09qu {
  max-width: var(--d4g76u11);
}
._18zh09qv {
  max-width: var(--d4g76u12);
}
._18zh09qw {
  transition: var(--d4g76u5f);
}
._18zh09qx {
  transition: var(--d4g76u5g);
}
._18zh09qy:active {
  transform: var(--d4g76u5h);
}
html._18zh09qz ._18zh09q11,
html:not(._18zh09qz) ._18zh09q10 {
  background: var(--d4g76u1r);
}
html._18zh09qz ._18zh09q13,
html:not(._18zh09qz) ._18zh09q12 {
  background: var(--d4g76u1s);
}
html._18zh09qz ._18zh09q15,
html:not(._18zh09qz) ._18zh09q14 {
  background: var(--d4g76u1t);
}
html._18zh09qz ._18zh09q17,
html:not(._18zh09qz) ._18zh09q16 {
  background: var(--d4g76u1u);
}
html._18zh09qz ._18zh09q19,
html:not(._18zh09qz) ._18zh09q18 {
  background: var(--d4g76u1v);
}
html._18zh09qz ._18zh09q1b,
html:not(._18zh09qz) ._18zh09q1a {
  background: var(--d4g76u1w);
}
html._18zh09qz ._18zh09q1d,
html:not(._18zh09qz) ._18zh09q1c {
  background: var(--d4g76u1x);
}
html._18zh09qz ._18zh09q1f,
html:not(._18zh09qz) ._18zh09q1e {
  background: var(--d4g76u1y);
}
html._18zh09qz ._18zh09q1h,
html:not(._18zh09qz) ._18zh09q1g {
  background: var(--d4g76u1z);
}
html._18zh09qz ._18zh09q1j,
html:not(._18zh09qz) ._18zh09q1i {
  background: var(--d4g76u20);
}
html._18zh09qz ._18zh09q1l,
html:not(._18zh09qz) ._18zh09q1k {
  background: var(--d4g76u21);
}
html._18zh09qz ._18zh09q1n,
html:not(._18zh09qz) ._18zh09q1m {
  background: var(--d4g76u22);
}
html._18zh09qz ._18zh09q1p,
html:not(._18zh09qz) ._18zh09q1o {
  background: var(--d4g76u23);
}
html._18zh09qz ._18zh09q1r,
html:not(._18zh09qz) ._18zh09q1q {
  background: var(--d4g76u24);
}
html._18zh09qz ._18zh09q1t,
html:not(._18zh09qz) ._18zh09q1s {
  background: var(--d4g76u25);
}
html._18zh09qz ._18zh09q1v,
html:not(._18zh09qz) ._18zh09q1u {
  background: var(--d4g76u26);
}
html._18zh09qz ._18zh09q1x,
html:not(._18zh09qz) ._18zh09q1w {
  background: var(--d4g76u27);
}
html._18zh09qz ._18zh09q1z,
html:not(._18zh09qz) ._18zh09q1y {
  background: var(--d4g76u28);
}
html._18zh09qz ._18zh09q21,
html:not(._18zh09qz) ._18zh09q20 {
  background: var(--d4g76u29);
}
html._18zh09qz ._18zh09q23,
html:not(._18zh09qz) ._18zh09q22 {
  background: var(--d4g76u2a);
}
html._18zh09qz ._18zh09q25,
html:not(._18zh09qz) ._18zh09q24 {
  background: var(--d4g76u2b);
}
html._18zh09qz ._18zh09q27,
html:not(._18zh09qz) ._18zh09q26 {
  background: var(--d4g76u2c);
}
html._18zh09qz ._18zh09q29,
html:not(._18zh09qz) ._18zh09q28 {
  background: var(--d4g76u2d);
}
html._18zh09qz ._18zh09q2b,
html:not(._18zh09qz) ._18zh09q2a {
  background: var(--d4g76u2e);
}
html._18zh09qz ._18zh09q2d,
html:not(._18zh09qz) ._18zh09q2c {
  background: var(--d4g76u2f);
}
html._18zh09qz ._18zh09q2f,
html:not(._18zh09qz) ._18zh09q2e {
  background: var(--d4g76u2g);
}
html._18zh09qz ._18zh09q2h,
html:not(._18zh09qz) ._18zh09q2g {
  background: var(--d4g76u2h);
}
html._18zh09qz ._18zh09q2j,
html:not(._18zh09qz) ._18zh09q2i {
  background: var(--d4g76u2i);
}
html._18zh09qz ._18zh09q2l,
html:not(._18zh09qz) ._18zh09q2k {
  background: var(--d4g76u2j);
}
html._18zh09qz ._18zh09q2n,
html:not(._18zh09qz) ._18zh09q2m {
  background: var(--d4g76u2k);
}
html._18zh09qz ._18zh09q2p,
html:not(._18zh09qz) ._18zh09q2o {
  background: var(--d4g76u2l);
}
html._18zh09qz ._18zh09q2r,
html:not(._18zh09qz) ._18zh09q2q {
  background: var(--d4g76u2m);
}
html._18zh09qz ._18zh09q2t,
html:not(._18zh09qz) ._18zh09q2s {
  background: var(--d4g76u2n);
}
html._18zh09qz ._18zh09q2v,
html:not(._18zh09qz) ._18zh09q2u {
  background: var(--d4g76u2o);
}
html._18zh09qz ._18zh09q2x,
html:not(._18zh09qz) ._18zh09q2w {
  background: var(--d4g76u2p);
}
html._18zh09qz ._18zh09q2z,
html:not(._18zh09qz) ._18zh09q2y {
  background: var(--d4g76u2q);
}
html._18zh09qz ._18zh09q31,
html:not(._18zh09qz) ._18zh09q30 {
  background: var(--d4g76u2r);
}
html._18zh09qz ._18zh09q33,
html:not(._18zh09qz) ._18zh09q32 {
  background: var(--d4g76u2s);
}
html._18zh09qz ._18zh09q35,
html:not(._18zh09qz) ._18zh09q34 {
  background: var(--d4g76u2t);
}
html._18zh09qz ._18zh09q37,
html:not(._18zh09qz) ._18zh09q36 {
  box-shadow: var(--d4g76u5i);
}
html._18zh09qz ._18zh09q39,
html:not(._18zh09qz) ._18zh09q38 {
  box-shadow: var(--d4g76u5j);
}
html._18zh09qz ._18zh09q3b,
html:not(._18zh09qz) ._18zh09q3a {
  box-shadow: var(--d4g76u5k);
}
html._18zh09qz ._18zh09q3d,
html:not(._18zh09qz) ._18zh09q3c {
  box-shadow: inset 0 0 0 var(--d4g76ux) var(--d4g76ud);
}
html._18zh09qz ._18zh09q3f,
html:not(._18zh09qz) ._18zh09q3e {
  box-shadow: inset 0 0 0 var(--d4g76ux) var(--d4g76ue);
}
html._18zh09qz ._18zh09q3h,
html:not(._18zh09qz) ._18zh09q3g {
  box-shadow: inset 0 0 0 var(--d4g76uw) var(--d4g76uf);
}
html._18zh09qz ._18zh09q3j,
html:not(._18zh09qz) ._18zh09q3i {
  box-shadow: inset 0 0 0 var(--d4g76uw) var(--d4g76ug);
}
html._18zh09qz ._18zh09q3l,
html:not(._18zh09qz) ._18zh09q3k {
  box-shadow: inset 0 0 0 var(--d4g76uw) var(--d4g76uh);
}
html._18zh09qz ._18zh09q3n,
html:not(._18zh09qz) ._18zh09q3m {
  box-shadow: inset 0 0 0 var(--d4g76ux) var(--d4g76uh);
}
html._18zh09qz ._18zh09q3p,
html:not(._18zh09qz) ._18zh09q3o {
  box-shadow: inset 0 0 0 var(--d4g76uw) var(--d4g76ui);
}
html._18zh09qz ._18zh09q3r,
html:not(._18zh09qz) ._18zh09q3q {
  box-shadow: inset 0 0 0 var(--d4g76ux) var(--d4g76ui);
}
html._18zh09qz ._18zh09q3t,
html:not(._18zh09qz) ._18zh09q3s {
  box-shadow: inset 0 0 0 var(--d4g76uw) var(--d4g76uj);
}
html._18zh09qz ._18zh09q3v,
html:not(._18zh09qz) ._18zh09q3u {
  box-shadow: inset 0 0 0 var(--d4g76uw) var(--d4g76ul);
}
html._18zh09qz ._18zh09q3x,
html:not(._18zh09qz) ._18zh09q3w {
  box-shadow: inset 0 0 0 var(--d4g76ux) var(--d4g76ul);
}
html._18zh09qz ._18zh09q3z,
html:not(._18zh09qz) ._18zh09q3y {
  box-shadow: inset 0 0 0 var(--d4g76uw) var(--d4g76um);
}
html._18zh09qz ._18zh09q41,
html:not(._18zh09qz) ._18zh09q40 {
  box-shadow: inset 0 0 0 var(--d4g76ux) var(--d4g76um);
}
html._18zh09qz ._18zh09q43,
html:not(._18zh09qz) ._18zh09q42 {
  box-shadow: inset 0 0 0 var(--d4g76uw) var(--d4g76un);
}
html._18zh09qz ._18zh09q45,
html:not(._18zh09qz) ._18zh09q44 {
  box-shadow: inset 0 0 0 var(--d4g76uw) var(--d4g76uo);
}
html._18zh09qz ._18zh09q47,
html:not(._18zh09qz) ._18zh09q46 {
  box-shadow: inset 0 0 0 var(--d4g76uw) var(--d4g76up);
}
html._18zh09qz ._18zh09q49,
html:not(._18zh09qz) ._18zh09q48 {
  box-shadow: inset 0 0 0 var(--d4g76ux) var(--d4g76up);
}
html._18zh09qz ._18zh09q4b,
html:not(._18zh09qz) ._18zh09q4a {
  box-shadow: inset 0 0 0 var(--d4g76uw) var(--d4g76uq);
}
html._18zh09qz ._18zh09q4d,
html:not(._18zh09qz) ._18zh09q4c {
  box-shadow: inset 0 0 0 var(--d4g76ux) var(--d4g76uq);
}
html._18zh09qz ._18zh09q4f,
html:not(._18zh09qz) ._18zh09q4e {
  box-shadow: inset 0 0 0 var(--d4g76uw) var(--d4g76ur);
}
html._18zh09qz ._18zh09q4h,
html:not(._18zh09qz) ._18zh09q4g {
  box-shadow: inset 0 0 0 var(--d4g76uw) var(--d4g76us);
}
html._18zh09qz ._18zh09q4j,
html:not(._18zh09qz) ._18zh09q4i {
  box-shadow: inset 0 0 0 var(--d4g76uw) var(--d4g76ut);
}
html._18zh09qz ._18zh09q4l,
html:not(._18zh09qz) ._18zh09q4k {
  box-shadow: inset 0 0 0 var(--d4g76uw) var(--d4g76uu);
}
html._18zh09qz ._18zh09q4n,
html:not(._18zh09qz) ._18zh09q4m {
  box-shadow: inset 0 0 0 var(--d4g76uw) var(--d4g76uv);
}
html._18zh09qz ._18zh09q4p,
html:not(._18zh09qz) ._18zh09q4o {
  box-shadow: 0 0 0 var(--d4g76uy) var(--d4g76uk);
}
._18zh09q4q {
  display: none;
}
._18zh09q4u {
  display: block;
}
._18zh09q4y {
  display: inline;
}
._18zh09q52 {
  display: inline-block;
}
._18zh09q56 {
  display: flex;
}
._18zh09q5a {
  position: relative;
}
._18zh09q5e {
  position: absolute;
}
._18zh09q5i {
  position: fixed;
}
._18zh09q5m {
  border-radius: 0;
}
._18zh09q5q {
  border-radius: 9999px;
}
._18zh09q5u {
  border-radius: var(--d4g76ua);
}
._18zh09q5y {
  border-radius: var(--d4g76ub);
}
._18zh09q62 {
  border-radius: var(--d4g76uc);
}
._18zh09q66 {
  padding-top: var(--d4g76u0);
}
._18zh09q6a {
  padding-top: var(--d4g76u1);
}
._18zh09q6e {
  padding-top: var(--d4g76u2);
}
._18zh09q6i {
  padding-top: var(--d4g76u3);
}
._18zh09q6m {
  padding-top: var(--d4g76u4);
}
._18zh09q6q {
  padding-top: var(--d4g76u5);
}
._18zh09q6u {
  padding-top: var(--d4g76u6);
}
._18zh09q6y {
  padding-top: var(--d4g76u7);
}
._18zh09q72 {
  padding-top: 0;
}
._18zh09q76 {
  padding-bottom: var(--d4g76u0);
}
._18zh09q7a {
  padding-bottom: var(--d4g76u1);
}
._18zh09q7e {
  padding-bottom: var(--d4g76u2);
}
._18zh09q7i {
  padding-bottom: var(--d4g76u3);
}
._18zh09q7m {
  padding-bottom: var(--d4g76u4);
}
._18zh09q7q {
  padding-bottom: var(--d4g76u5);
}
._18zh09q7u {
  padding-bottom: var(--d4g76u6);
}
._18zh09q7y {
  padding-bottom: var(--d4g76u7);
}
._18zh09q82 {
  padding-bottom: 0;
}
._18zh09q86 {
  padding-right: var(--d4g76u0);
}
._18zh09q8a {
  padding-right: var(--d4g76u1);
}
._18zh09q8e {
  padding-right: var(--d4g76u2);
}
._18zh09q8i {
  padding-right: var(--d4g76u3);
}
._18zh09q8m {
  padding-right: var(--d4g76u4);
}
._18zh09q8q {
  padding-right: var(--d4g76u5);
}
._18zh09q8u {
  padding-right: var(--d4g76u6);
}
._18zh09q8y {
  padding-right: var(--d4g76u7);
}
._18zh09q92 {
  padding-right: 0;
}
._18zh09q96 {
  padding-left: var(--d4g76u0);
}
._18zh09q9a {
  padding-left: var(--d4g76u1);
}
._18zh09q9e {
  padding-left: var(--d4g76u2);
}
._18zh09q9i {
  padding-left: var(--d4g76u3);
}
._18zh09q9m {
  padding-left: var(--d4g76u4);
}
._18zh09q9q {
  padding-left: var(--d4g76u5);
}
._18zh09q9u {
  padding-left: var(--d4g76u6);
}
._18zh09q9y {
  padding-left: var(--d4g76u7);
}
._18zh09qa2 {
  padding-left: 0;
}
._18zh09qa6 {
  margin-top: var(--d4g76u0);
}
._18zh09qaa {
  margin-top: var(--d4g76u1);
}
._18zh09qae {
  margin-top: var(--d4g76u2);
}
._18zh09qai {
  margin-top: var(--d4g76u3);
}
._18zh09qam {
  margin-top: var(--d4g76u4);
}
._18zh09qaq {
  margin-top: var(--d4g76u5);
}
._18zh09qau {
  margin-top: var(--d4g76u6);
}
._18zh09qay {
  margin-top: var(--d4g76u7);
}
._18zh09qb2 {
  margin-top: 0;
}
._18zh09qb6 {
  margin-bottom: var(--d4g76u0);
}
._18zh09qba {
  margin-bottom: var(--d4g76u1);
}
._18zh09qbe {
  margin-bottom: var(--d4g76u2);
}
._18zh09qbi {
  margin-bottom: var(--d4g76u3);
}
._18zh09qbm {
  margin-bottom: var(--d4g76u4);
}
._18zh09qbq {
  margin-bottom: var(--d4g76u5);
}
._18zh09qbu {
  margin-bottom: var(--d4g76u6);
}
._18zh09qby {
  margin-bottom: var(--d4g76u7);
}
._18zh09qc2 {
  margin-bottom: 0;
}
._18zh09qc6 {
  margin-right: var(--d4g76u0);
}
._18zh09qca {
  margin-right: var(--d4g76u1);
}
._18zh09qce {
  margin-right: var(--d4g76u2);
}
._18zh09qci {
  margin-right: var(--d4g76u3);
}
._18zh09qcm {
  margin-right: var(--d4g76u4);
}
._18zh09qcq {
  margin-right: var(--d4g76u5);
}
._18zh09qcu {
  margin-right: var(--d4g76u6);
}
._18zh09qcy {
  margin-right: var(--d4g76u7);
}
._18zh09qd2 {
  margin-right: 0;
}
._18zh09qd6 {
  margin-left: var(--d4g76u0);
}
._18zh09qda {
  margin-left: var(--d4g76u1);
}
._18zh09qde {
  margin-left: var(--d4g76u2);
}
._18zh09qdi {
  margin-left: var(--d4g76u3);
}
._18zh09qdm {
  margin-left: var(--d4g76u4);
}
._18zh09qdq {
  margin-left: var(--d4g76u5);
}
._18zh09qdu {
  margin-left: var(--d4g76u6);
}
._18zh09qdy {
  margin-left: var(--d4g76u7);
}
._18zh09qe2 {
  margin-left: 0;
}
._18zh09qe6 {
  align-items: flex-start;
}
._18zh09qea {
  align-items: center;
}
._18zh09qee {
  align-items: flex-end;
}
._18zh09qei {
  justify-content: flex-start;
}
._18zh09qem {
  justify-content: center;
}
._18zh09qeq {
  justify-content: flex-end;
}
._18zh09qeu {
  justify-content: space-between;
}
._18zh09qey {
  flex-direction: row;
}
._18zh09qf2 {
  flex-direction: row-reverse;
}
._18zh09qf6 {
  flex-direction: column;
}
._18zh09qfa {
  flex-direction: column-reverse;
}
._18zh09qfe {
  flex-wrap: wrap;
}
._18zh09qfi {
  flex-wrap: nowrap;
}
._18zh09qfm {
  flex-shrink: 0;
}
._18zh09qfq {
  flex-grow: 0;
}
._18zh09qfu {
  flex-grow: 1;
}
._18zh09qfy {
  text-align: left;
}
._18zh09qg2 {
  text-align: center;
}
._18zh09qg6 {
  text-align: right;
}
@media screen and (min-width: 740px) {
  ._18zh09q4r {
    display: none;
  }
  ._18zh09q4v {
    display: block;
  }
  ._18zh09q4z {
    display: inline;
  }
  ._18zh09q53 {
    display: inline-block;
  }
  ._18zh09q57 {
    display: flex;
  }
  ._18zh09q5b {
    position: relative;
  }
  ._18zh09q5f {
    position: absolute;
  }
  ._18zh09q5j {
    position: fixed;
  }
  ._18zh09q5n {
    border-radius: 0;
  }
  ._18zh09q5r {
    border-radius: 9999px;
  }
  ._18zh09q5v {
    border-radius: var(--d4g76ua);
  }
  ._18zh09q5z {
    border-radius: var(--d4g76ub);
  }
  ._18zh09q63 {
    border-radius: var(--d4g76uc);
  }
  ._18zh09q67 {
    padding-top: var(--d4g76u0);
  }
  ._18zh09q6b {
    padding-top: var(--d4g76u1);
  }
  ._18zh09q6f {
    padding-top: var(--d4g76u2);
  }
  ._18zh09q6j {
    padding-top: var(--d4g76u3);
  }
  ._18zh09q6n {
    padding-top: var(--d4g76u4);
  }
  ._18zh09q6r {
    padding-top: var(--d4g76u5);
  }
  ._18zh09q6v {
    padding-top: var(--d4g76u6);
  }
  ._18zh09q6z {
    padding-top: var(--d4g76u7);
  }
  ._18zh09q73 {
    padding-top: 0;
  }
  ._18zh09q77 {
    padding-bottom: var(--d4g76u0);
  }
  ._18zh09q7b {
    padding-bottom: var(--d4g76u1);
  }
  ._18zh09q7f {
    padding-bottom: var(--d4g76u2);
  }
  ._18zh09q7j {
    padding-bottom: var(--d4g76u3);
  }
  ._18zh09q7n {
    padding-bottom: var(--d4g76u4);
  }
  ._18zh09q7r {
    padding-bottom: var(--d4g76u5);
  }
  ._18zh09q7v {
    padding-bottom: var(--d4g76u6);
  }
  ._18zh09q7z {
    padding-bottom: var(--d4g76u7);
  }
  ._18zh09q83 {
    padding-bottom: 0;
  }
  ._18zh09q87 {
    padding-right: var(--d4g76u0);
  }
  ._18zh09q8b {
    padding-right: var(--d4g76u1);
  }
  ._18zh09q8f {
    padding-right: var(--d4g76u2);
  }
  ._18zh09q8j {
    padding-right: var(--d4g76u3);
  }
  ._18zh09q8n {
    padding-right: var(--d4g76u4);
  }
  ._18zh09q8r {
    padding-right: var(--d4g76u5);
  }
  ._18zh09q8v {
    padding-right: var(--d4g76u6);
  }
  ._18zh09q8z {
    padding-right: var(--d4g76u7);
  }
  ._18zh09q93 {
    padding-right: 0;
  }
  ._18zh09q97 {
    padding-left: var(--d4g76u0);
  }
  ._18zh09q9b {
    padding-left: var(--d4g76u1);
  }
  ._18zh09q9f {
    padding-left: var(--d4g76u2);
  }
  ._18zh09q9j {
    padding-left: var(--d4g76u3);
  }
  ._18zh09q9n {
    padding-left: var(--d4g76u4);
  }
  ._18zh09q9r {
    padding-left: var(--d4g76u5);
  }
  ._18zh09q9v {
    padding-left: var(--d4g76u6);
  }
  ._18zh09q9z {
    padding-left: var(--d4g76u7);
  }
  ._18zh09qa3 {
    padding-left: 0;
  }
  ._18zh09qa7 {
    margin-top: var(--d4g76u0);
  }
  ._18zh09qab {
    margin-top: var(--d4g76u1);
  }
  ._18zh09qaf {
    margin-top: var(--d4g76u2);
  }
  ._18zh09qaj {
    margin-top: var(--d4g76u3);
  }
  ._18zh09qan {
    margin-top: var(--d4g76u4);
  }
  ._18zh09qar {
    margin-top: var(--d4g76u5);
  }
  ._18zh09qav {
    margin-top: var(--d4g76u6);
  }
  ._18zh09qaz {
    margin-top: var(--d4g76u7);
  }
  ._18zh09qb3 {
    margin-top: 0;
  }
  ._18zh09qb7 {
    margin-bottom: var(--d4g76u0);
  }
  ._18zh09qbb {
    margin-bottom: var(--d4g76u1);
  }
  ._18zh09qbf {
    margin-bottom: var(--d4g76u2);
  }
  ._18zh09qbj {
    margin-bottom: var(--d4g76u3);
  }
  ._18zh09qbn {
    margin-bottom: var(--d4g76u4);
  }
  ._18zh09qbr {
    margin-bottom: var(--d4g76u5);
  }
  ._18zh09qbv {
    margin-bottom: var(--d4g76u6);
  }
  ._18zh09qbz {
    margin-bottom: var(--d4g76u7);
  }
  ._18zh09qc3 {
    margin-bottom: 0;
  }
  ._18zh09qc7 {
    margin-right: var(--d4g76u0);
  }
  ._18zh09qcb {
    margin-right: var(--d4g76u1);
  }
  ._18zh09qcf {
    margin-right: var(--d4g76u2);
  }
  ._18zh09qcj {
    margin-right: var(--d4g76u3);
  }
  ._18zh09qcn {
    margin-right: var(--d4g76u4);
  }
  ._18zh09qcr {
    margin-right: var(--d4g76u5);
  }
  ._18zh09qcv {
    margin-right: var(--d4g76u6);
  }
  ._18zh09qcz {
    margin-right: var(--d4g76u7);
  }
  ._18zh09qd3 {
    margin-right: 0;
  }
  ._18zh09qd7 {
    margin-left: var(--d4g76u0);
  }
  ._18zh09qdb {
    margin-left: var(--d4g76u1);
  }
  ._18zh09qdf {
    margin-left: var(--d4g76u2);
  }
  ._18zh09qdj {
    margin-left: var(--d4g76u3);
  }
  ._18zh09qdn {
    margin-left: var(--d4g76u4);
  }
  ._18zh09qdr {
    margin-left: var(--d4g76u5);
  }
  ._18zh09qdv {
    margin-left: var(--d4g76u6);
  }
  ._18zh09qdz {
    margin-left: var(--d4g76u7);
  }
  ._18zh09qe3 {
    margin-left: 0;
  }
  ._18zh09qe7 {
    align-items: flex-start;
  }
  ._18zh09qeb {
    align-items: center;
  }
  ._18zh09qef {
    align-items: flex-end;
  }
  ._18zh09qej {
    justify-content: flex-start;
  }
  ._18zh09qen {
    justify-content: center;
  }
  ._18zh09qer {
    justify-content: flex-end;
  }
  ._18zh09qev {
    justify-content: space-between;
  }
  ._18zh09qez {
    flex-direction: row;
  }
  ._18zh09qf3 {
    flex-direction: row-reverse;
  }
  ._18zh09qf7 {
    flex-direction: column;
  }
  ._18zh09qfb {
    flex-direction: column-reverse;
  }
  ._18zh09qff {
    flex-wrap: wrap;
  }
  ._18zh09qfj {
    flex-wrap: nowrap;
  }
  ._18zh09qfn {
    flex-shrink: 0;
  }
  ._18zh09qfr {
    flex-grow: 0;
  }
  ._18zh09qfv {
    flex-grow: 1;
  }
  ._18zh09qfz {
    text-align: left;
  }
  ._18zh09qg3 {
    text-align: center;
  }
  ._18zh09qg7 {
    text-align: right;
  }
}
@media screen and (min-width: 992px) {
  ._18zh09q4s {
    display: none;
  }
  ._18zh09q4w {
    display: block;
  }
  ._18zh09q50 {
    display: inline;
  }
  ._18zh09q54 {
    display: inline-block;
  }
  ._18zh09q58 {
    display: flex;
  }
  ._18zh09q5c {
    position: relative;
  }
  ._18zh09q5g {
    position: absolute;
  }
  ._18zh09q5k {
    position: fixed;
  }
  ._18zh09q5o {
    border-radius: 0;
  }
  ._18zh09q5s {
    border-radius: 9999px;
  }
  ._18zh09q5w {
    border-radius: var(--d4g76ua);
  }
  ._18zh09q60 {
    border-radius: var(--d4g76ub);
  }
  ._18zh09q64 {
    border-radius: var(--d4g76uc);
  }
  ._18zh09q68 {
    padding-top: var(--d4g76u0);
  }
  ._18zh09q6c {
    padding-top: var(--d4g76u1);
  }
  ._18zh09q6g {
    padding-top: var(--d4g76u2);
  }
  ._18zh09q6k {
    padding-top: var(--d4g76u3);
  }
  ._18zh09q6o {
    padding-top: var(--d4g76u4);
  }
  ._18zh09q6s {
    padding-top: var(--d4g76u5);
  }
  ._18zh09q6w {
    padding-top: var(--d4g76u6);
  }
  ._18zh09q70 {
    padding-top: var(--d4g76u7);
  }
  ._18zh09q74 {
    padding-top: 0;
  }
  ._18zh09q78 {
    padding-bottom: var(--d4g76u0);
  }
  ._18zh09q7c {
    padding-bottom: var(--d4g76u1);
  }
  ._18zh09q7g {
    padding-bottom: var(--d4g76u2);
  }
  ._18zh09q7k {
    padding-bottom: var(--d4g76u3);
  }
  ._18zh09q7o {
    padding-bottom: var(--d4g76u4);
  }
  ._18zh09q7s {
    padding-bottom: var(--d4g76u5);
  }
  ._18zh09q7w {
    padding-bottom: var(--d4g76u6);
  }
  ._18zh09q80 {
    padding-bottom: var(--d4g76u7);
  }
  ._18zh09q84 {
    padding-bottom: 0;
  }
  ._18zh09q88 {
    padding-right: var(--d4g76u0);
  }
  ._18zh09q8c {
    padding-right: var(--d4g76u1);
  }
  ._18zh09q8g {
    padding-right: var(--d4g76u2);
  }
  ._18zh09q8k {
    padding-right: var(--d4g76u3);
  }
  ._18zh09q8o {
    padding-right: var(--d4g76u4);
  }
  ._18zh09q8s {
    padding-right: var(--d4g76u5);
  }
  ._18zh09q8w {
    padding-right: var(--d4g76u6);
  }
  ._18zh09q90 {
    padding-right: var(--d4g76u7);
  }
  ._18zh09q94 {
    padding-right: 0;
  }
  ._18zh09q98 {
    padding-left: var(--d4g76u0);
  }
  ._18zh09q9c {
    padding-left: var(--d4g76u1);
  }
  ._18zh09q9g {
    padding-left: var(--d4g76u2);
  }
  ._18zh09q9k {
    padding-left: var(--d4g76u3);
  }
  ._18zh09q9o {
    padding-left: var(--d4g76u4);
  }
  ._18zh09q9s {
    padding-left: var(--d4g76u5);
  }
  ._18zh09q9w {
    padding-left: var(--d4g76u6);
  }
  ._18zh09qa0 {
    padding-left: var(--d4g76u7);
  }
  ._18zh09qa4 {
    padding-left: 0;
  }
  ._18zh09qa8 {
    margin-top: var(--d4g76u0);
  }
  ._18zh09qac {
    margin-top: var(--d4g76u1);
  }
  ._18zh09qag {
    margin-top: var(--d4g76u2);
  }
  ._18zh09qak {
    margin-top: var(--d4g76u3);
  }
  ._18zh09qao {
    margin-top: var(--d4g76u4);
  }
  ._18zh09qas {
    margin-top: var(--d4g76u5);
  }
  ._18zh09qaw {
    margin-top: var(--d4g76u6);
  }
  ._18zh09qb0 {
    margin-top: var(--d4g76u7);
  }
  ._18zh09qb4 {
    margin-top: 0;
  }
  ._18zh09qb8 {
    margin-bottom: var(--d4g76u0);
  }
  ._18zh09qbc {
    margin-bottom: var(--d4g76u1);
  }
  ._18zh09qbg {
    margin-bottom: var(--d4g76u2);
  }
  ._18zh09qbk {
    margin-bottom: var(--d4g76u3);
  }
  ._18zh09qbo {
    margin-bottom: var(--d4g76u4);
  }
  ._18zh09qbs {
    margin-bottom: var(--d4g76u5);
  }
  ._18zh09qbw {
    margin-bottom: var(--d4g76u6);
  }
  ._18zh09qc0 {
    margin-bottom: var(--d4g76u7);
  }
  ._18zh09qc4 {
    margin-bottom: 0;
  }
  ._18zh09qc8 {
    margin-right: var(--d4g76u0);
  }
  ._18zh09qcc {
    margin-right: var(--d4g76u1);
  }
  ._18zh09qcg {
    margin-right: var(--d4g76u2);
  }
  ._18zh09qck {
    margin-right: var(--d4g76u3);
  }
  ._18zh09qco {
    margin-right: var(--d4g76u4);
  }
  ._18zh09qcs {
    margin-right: var(--d4g76u5);
  }
  ._18zh09qcw {
    margin-right: var(--d4g76u6);
  }
  ._18zh09qd0 {
    margin-right: var(--d4g76u7);
  }
  ._18zh09qd4 {
    margin-right: 0;
  }
  ._18zh09qd8 {
    margin-left: var(--d4g76u0);
  }
  ._18zh09qdc {
    margin-left: var(--d4g76u1);
  }
  ._18zh09qdg {
    margin-left: var(--d4g76u2);
  }
  ._18zh09qdk {
    margin-left: var(--d4g76u3);
  }
  ._18zh09qdo {
    margin-left: var(--d4g76u4);
  }
  ._18zh09qds {
    margin-left: var(--d4g76u5);
  }
  ._18zh09qdw {
    margin-left: var(--d4g76u6);
  }
  ._18zh09qe0 {
    margin-left: var(--d4g76u7);
  }
  ._18zh09qe4 {
    margin-left: 0;
  }
  ._18zh09qe8 {
    align-items: flex-start;
  }
  ._18zh09qec {
    align-items: center;
  }
  ._18zh09qeg {
    align-items: flex-end;
  }
  ._18zh09qek {
    justify-content: flex-start;
  }
  ._18zh09qeo {
    justify-content: center;
  }
  ._18zh09qes {
    justify-content: flex-end;
  }
  ._18zh09qew {
    justify-content: space-between;
  }
  ._18zh09qf0 {
    flex-direction: row;
  }
  ._18zh09qf4 {
    flex-direction: row-reverse;
  }
  ._18zh09qf8 {
    flex-direction: column;
  }
  ._18zh09qfc {
    flex-direction: column-reverse;
  }
  ._18zh09qfg {
    flex-wrap: wrap;
  }
  ._18zh09qfk {
    flex-wrap: nowrap;
  }
  ._18zh09qfo {
    flex-shrink: 0;
  }
  ._18zh09qfs {
    flex-grow: 0;
  }
  ._18zh09qfw {
    flex-grow: 1;
  }
  ._18zh09qg0 {
    text-align: left;
  }
  ._18zh09qg4 {
    text-align: center;
  }
  ._18zh09qg8 {
    text-align: right;
  }
}
@media screen and (min-width: 1200px) {
  ._18zh09q4t {
    display: none;
  }
  ._18zh09q4x {
    display: block;
  }
  ._18zh09q51 {
    display: inline;
  }
  ._18zh09q55 {
    display: inline-block;
  }
  ._18zh09q59 {
    display: flex;
  }
  ._18zh09q5d {
    position: relative;
  }
  ._18zh09q5h {
    position: absolute;
  }
  ._18zh09q5l {
    position: fixed;
  }
  ._18zh09q5p {
    border-radius: 0;
  }
  ._18zh09q5t {
    border-radius: 9999px;
  }
  ._18zh09q5x {
    border-radius: var(--d4g76ua);
  }
  ._18zh09q61 {
    border-radius: var(--d4g76ub);
  }
  ._18zh09q65 {
    border-radius: var(--d4g76uc);
  }
  ._18zh09q69 {
    padding-top: var(--d4g76u0);
  }
  ._18zh09q6d {
    padding-top: var(--d4g76u1);
  }
  ._18zh09q6h {
    padding-top: var(--d4g76u2);
  }
  ._18zh09q6l {
    padding-top: var(--d4g76u3);
  }
  ._18zh09q6p {
    padding-top: var(--d4g76u4);
  }
  ._18zh09q6t {
    padding-top: var(--d4g76u5);
  }
  ._18zh09q6x {
    padding-top: var(--d4g76u6);
  }
  ._18zh09q71 {
    padding-top: var(--d4g76u7);
  }
  ._18zh09q75 {
    padding-top: 0;
  }
  ._18zh09q79 {
    padding-bottom: var(--d4g76u0);
  }
  ._18zh09q7d {
    padding-bottom: var(--d4g76u1);
  }
  ._18zh09q7h {
    padding-bottom: var(--d4g76u2);
  }
  ._18zh09q7l {
    padding-bottom: var(--d4g76u3);
  }
  ._18zh09q7p {
    padding-bottom: var(--d4g76u4);
  }
  ._18zh09q7t {
    padding-bottom: var(--d4g76u5);
  }
  ._18zh09q7x {
    padding-bottom: var(--d4g76u6);
  }
  ._18zh09q81 {
    padding-bottom: var(--d4g76u7);
  }
  ._18zh09q85 {
    padding-bottom: 0;
  }
  ._18zh09q89 {
    padding-right: var(--d4g76u0);
  }
  ._18zh09q8d {
    padding-right: var(--d4g76u1);
  }
  ._18zh09q8h {
    padding-right: var(--d4g76u2);
  }
  ._18zh09q8l {
    padding-right: var(--d4g76u3);
  }
  ._18zh09q8p {
    padding-right: var(--d4g76u4);
  }
  ._18zh09q8t {
    padding-right: var(--d4g76u5);
  }
  ._18zh09q8x {
    padding-right: var(--d4g76u6);
  }
  ._18zh09q91 {
    padding-right: var(--d4g76u7);
  }
  ._18zh09q95 {
    padding-right: 0;
  }
  ._18zh09q99 {
    padding-left: var(--d4g76u0);
  }
  ._18zh09q9d {
    padding-left: var(--d4g76u1);
  }
  ._18zh09q9h {
    padding-left: var(--d4g76u2);
  }
  ._18zh09q9l {
    padding-left: var(--d4g76u3);
  }
  ._18zh09q9p {
    padding-left: var(--d4g76u4);
  }
  ._18zh09q9t {
    padding-left: var(--d4g76u5);
  }
  ._18zh09q9x {
    padding-left: var(--d4g76u6);
  }
  ._18zh09qa1 {
    padding-left: var(--d4g76u7);
  }
  ._18zh09qa5 {
    padding-left: 0;
  }
  ._18zh09qa9 {
    margin-top: var(--d4g76u0);
  }
  ._18zh09qad {
    margin-top: var(--d4g76u1);
  }
  ._18zh09qah {
    margin-top: var(--d4g76u2);
  }
  ._18zh09qal {
    margin-top: var(--d4g76u3);
  }
  ._18zh09qap {
    margin-top: var(--d4g76u4);
  }
  ._18zh09qat {
    margin-top: var(--d4g76u5);
  }
  ._18zh09qax {
    margin-top: var(--d4g76u6);
  }
  ._18zh09qb1 {
    margin-top: var(--d4g76u7);
  }
  ._18zh09qb5 {
    margin-top: 0;
  }
  ._18zh09qb9 {
    margin-bottom: var(--d4g76u0);
  }
  ._18zh09qbd {
    margin-bottom: var(--d4g76u1);
  }
  ._18zh09qbh {
    margin-bottom: var(--d4g76u2);
  }
  ._18zh09qbl {
    margin-bottom: var(--d4g76u3);
  }
  ._18zh09qbp {
    margin-bottom: var(--d4g76u4);
  }
  ._18zh09qbt {
    margin-bottom: var(--d4g76u5);
  }
  ._18zh09qbx {
    margin-bottom: var(--d4g76u6);
  }
  ._18zh09qc1 {
    margin-bottom: var(--d4g76u7);
  }
  ._18zh09qc5 {
    margin-bottom: 0;
  }
  ._18zh09qc9 {
    margin-right: var(--d4g76u0);
  }
  ._18zh09qcd {
    margin-right: var(--d4g76u1);
  }
  ._18zh09qch {
    margin-right: var(--d4g76u2);
  }
  ._18zh09qcl {
    margin-right: var(--d4g76u3);
  }
  ._18zh09qcp {
    margin-right: var(--d4g76u4);
  }
  ._18zh09qct {
    margin-right: var(--d4g76u5);
  }
  ._18zh09qcx {
    margin-right: var(--d4g76u6);
  }
  ._18zh09qd1 {
    margin-right: var(--d4g76u7);
  }
  ._18zh09qd5 {
    margin-right: 0;
  }
  ._18zh09qd9 {
    margin-left: var(--d4g76u0);
  }
  ._18zh09qdd {
    margin-left: var(--d4g76u1);
  }
  ._18zh09qdh {
    margin-left: var(--d4g76u2);
  }
  ._18zh09qdl {
    margin-left: var(--d4g76u3);
  }
  ._18zh09qdp {
    margin-left: var(--d4g76u4);
  }
  ._18zh09qdt {
    margin-left: var(--d4g76u5);
  }
  ._18zh09qdx {
    margin-left: var(--d4g76u6);
  }
  ._18zh09qe1 {
    margin-left: var(--d4g76u7);
  }
  ._18zh09qe5 {
    margin-left: 0;
  }
  ._18zh09qe9 {
    align-items: flex-start;
  }
  ._18zh09qed {
    align-items: center;
  }
  ._18zh09qeh {
    align-items: flex-end;
  }
  ._18zh09qel {
    justify-content: flex-start;
  }
  ._18zh09qep {
    justify-content: center;
  }
  ._18zh09qet {
    justify-content: flex-end;
  }
  ._18zh09qex {
    justify-content: space-between;
  }
  ._18zh09qf1 {
    flex-direction: row;
  }
  ._18zh09qf5 {
    flex-direction: row-reverse;
  }
  ._18zh09qf9 {
    flex-direction: column;
  }
  ._18zh09qfd {
    flex-direction: column-reverse;
  }
  ._18zh09qfh {
    flex-wrap: wrap;
  }
  ._18zh09qfl {
    flex-wrap: nowrap;
  }
  ._18zh09qfp {
    flex-shrink: 0;
  }
  ._18zh09qft {
    flex-grow: 0;
  }
  ._18zh09qfx {
    flex-grow: 1;
  }
  ._18zh09qg1 {
    text-align: left;
  }
  ._18zh09qg5 {
    text-align: center;
  }
  ._18zh09qg9 {
    text-align: right;
  }
}
.dmx3na0 {
  --d4g76u0: 24px;
  --d4g76u1: 4px;
  --d4g76u2: 8px;
  --d4g76u3: 12px;
  --d4g76u4: 20px;
  --d4g76u5: 32px;
  --d4g76u6: 48px;
  --d4g76u7: 96px;
  --d4g76u8: 44px;
  --d4g76u9: 4px;
  --d4g76ua: 4px;
  --d4g76ub: 6px;
  --d4g76uc: 10px;
  --d4g76ud: #e60278;
  --d4g76ue: #f8b1dc;
  --d4g76uf: #fdc221;
  --d4g76ug: #fee384;
  --d4g76uh: #b91e1e;
  --d4g76ui: #fb999a;
  --d4g76uj: #838fa5;
  --d4g76uk: rgba(159, 176, 245, 0.7);
  --d4g76ul: #4964e9;
  --d4g76um: #9fb0f5;
  --d4g76un: #1d559d;
  --d4g76uo: #98c9f1;
  --d4g76up: #2e3849;
  --d4g76ur: #d2d7df;
  --d4g76uq: #fff;
  --d4g76us: #12784f;
  --d4g76ut: #8bdec5;
  --d4g76uu: #512eaa;
  --d4g76uv: #c6acf5;
  --d4g76uw: 1px;
  --d4g76ux: 2px;
  --d4g76uy: 3px;
  --d4g76uz: 400px;
  --d4g76u10: 660px;
  --d4g76u11: 940px;
  --d4g76u12: 1280px;
  --d4g76u13: #e60278;
  --d4g76u14: #f8b1dc;
  --d4g76u15: #723d02;
  --d4g76u16: #fee384;
  --d4g76u17: #b91e1e;
  --d4g76u18: #fb999a;
  --d4g76u19: #4964e9;
  --d4g76u1a: #9fb0f5;
  --d4g76u1b: #1d559d;
  --d4g76u1c: #98c9f1;
  --d4g76u1d: #4964e9;
  --d4g76u1f: #9fb0f5;
  --d4g76u1e: #4964e9;
  --d4g76u1g: #512eaa;
  --d4g76u1h: #c6acf5;
  --d4g76u1i: #2e3849;
  --d4g76u1j: #fff;
  --d4g76u1k: #12784f;
  --d4g76u1l: #8bdec5;
  --d4g76u1m: #512eaa;
  --d4g76u1n: #c6acf5;
  --d4g76u1o: #f57c00;
  --d4g76u1p: #5a6881;
  --d4g76u1q: hsla(0, 0%, 100%, 0.65);
  --d4g76u1r: #f7f8fb;
  --d4g76u1s: #0e131b;
  --d4g76u1t: #0d3880;
  --d4g76u1u: #e60278;
  --d4g76u1v: #cd026b;
  --d4g76u1w: #fd0585;
  --d4g76u1x: #feeffa;
  --d4g76u1y: #fdd7f3;
  --d4g76u1z: #fde3f6;
  --d4g76u20: #fdc221;
  --d4g76u21: #fef8de;
  --d4g76u22: #b91e1e;
  --d4g76u23: #a31a1a;
  --d4g76u24: #db1616;
  --d4g76u25: #ffe3e2;
  --d4g76u26: #fef3f3;
  --d4g76u27: #fcdbdb;
  --d4g76u28: #fde7e7;
  --d4g76u29: #4964e9;
  --d4g76u2a: #3251e6;
  --d4g76u2b: #5975ff;
  --d4g76u2c: #f4f6fe;
  --d4g76u2d: #dde3fc;
  --d4g76u2e: #e8ecfd;
  --d4g76u2f: #1d559d;
  --d4g76u2g: #e3f2fb;
  --d4g76u2h: #2e3849;
  --d4g76u2i: #242c39;
  --d4g76u2j: #384459;
  --d4g76u2k: #eaecf1;
  --d4g76u2l: #f7f8fb;
  --d4g76u2m: #e6e9f3;
  --d4g76u2n: #eff1f7;
  --d4g76u2o: #12784f;
  --d4g76u2p: #e2f7f1;
  --d4g76u2q: #512eaa;
  --d4g76u2r: #f1e8fd;
  --d4g76u2s: #fff;
  --d4g76u2t: #1c2330;
  --d4g76u2u: Roboto, "Helvetica Neue", HelveticaNeue, Helvetica, Arial,
    sans-serif;
  --d4g76u2v: 1456;
  --d4g76u2w: 1900;
  --d4g76u2x: -500;
  --d4g76u2y: 0;
  --d4g76u2z: 2048;
  --d4g76u30: 12px;
  --d4g76u31: 20px;
  --d4g76u32: 8.5313px;
  --d4g76u33: -0.4642em;
  --d4g76u34: -0.4915em;
  --d4g76u35: 12px;
  --d4g76u36: 20px;
  --d4g76u37: 8.5313px;
  --d4g76u38: -0.4642em;
  --d4g76u39: -0.4915em;
  --d4g76u3a: 14px;
  --d4g76u3b: 20px;
  --d4g76u3c: 9.9531px;
  --d4g76u3d: -0.3451em;
  --d4g76u3e: -0.3725em;
  --d4g76u3f: 14px;
  --d4g76u3g: 20px;
  --d4g76u3h: 9.9531px;
  --d4g76u3i: -0.3451em;
  --d4g76u3j: -0.3725em;
  --d4g76u3k: 16px;
  --d4g76u3l: 24px;
  --d4g76u3m: 11.375px;
  --d4g76u3n: -0.3809em;
  --d4g76u3o: -0.4082em;
  --d4g76u3p: 16px;
  --d4g76u3q: 24px;
  --d4g76u3r: 11.375px;
  --d4g76u3s: -0.3809em;
  --d4g76u3t: -0.4082em;
  --d4g76u3u: 18px;
  --d4g76u3v: 28px;
  --d4g76u3w: 12.7969px;
  --d4g76u3x: -0.4086em;
  --d4g76u3y: -0.436em;
  --d4g76u3z: 18px;
  --d4g76u40: 28px;
  --d4g76u41: 12.7969px;
  --d4g76u42: -0.4086em;
  --d4g76u43: -0.436em;
  --d4g76u44: 400;
  --d4g76u45: 500;
  --d4g76u46: 700;
  --d4g76u47: 28px;
  --d4g76u48: 36px;
  --d4g76u49: 19.9063px;
  --d4g76u4a: -0.2737em;
  --d4g76u4b: -0.3011em;
  --d4g76u4c: 42px;
  --d4g76u4d: 44px;
  --d4g76u4e: 29.8594px;
  --d4g76u4f: -0.1547em;
  --d4g76u4g: -0.182em;
  --d4g76u4h: 21px;
  --d4g76u4i: 32px;
  --d4g76u4j: 14.9297px;
  --d4g76u4k: -0.3928em;
  --d4g76u4l: -0.4201em;
  --d4g76u4m: 28px;
  --d4g76u4n: 36px;
  --d4g76u4o: 19.9063px;
  --d4g76u4p: -0.2737em;
  --d4g76u4q: -0.3011em;
  --d4g76u4r: 21px;
  --d4g76u4s: 28px;
  --d4g76u4t: 14.9297px;
  --d4g76u4u: -0.2975em;
  --d4g76u4v: -0.3249em;
  --d4g76u4w: 21px;
  --d4g76u4x: 28px;
  --d4g76u4y: 14.9297px;
  --d4g76u4z: -0.2975em;
  --d4g76u50: -0.3249em;
  --d4g76u51: 18px;
  --d4g76u52: 28px;
  --d4g76u53: 12.7969px;
  --d4g76u54: -0.4086em;
  --d4g76u55: -0.436em;
  --d4g76u56: 18px;
  --d4g76u57: 28px;
  --d4g76u58: 12.7969px;
  --d4g76u59: -0.4086em;
  --d4g76u5a: -0.436em;
  --d4g76u5b: 400;
  --d4g76u5c: 500;
  --d4g76u5d: 24px;
  --d4g76u5e: 20px;
  --d4g76u5f: transform 0.125s ease, opacity 0.125s ease;
  --d4g76u5g: transform 0.2s cubic-bezier(0.02, 1.505, 0.745, 1.235);
  --d4g76u5h: scale(0.95);
  --d4g76u5i: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 2px 2px -2px rgba(28, 35, 48, 0.1), 0 4px 4px -4px rgba(28, 35, 48, 0.2);
  --d4g76u5j: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 8px 8px -4px rgba(28, 35, 48, 0.1), 0 12px 12px -8px rgba(28, 35, 48, 0.2);
  --d4g76u5k: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 12px 12px -4px rgba(28, 35, 48, 0.1),
    0 20px 20px -12px rgba(28, 35, 48, 0.2);
}
.u59kha0 {
  font-family: var(--d4g76u2u);
}
.u59kha1 {
  font-weight: var(--d4g76u44);
}
.u59kha2 {
  font-weight: var(--d4g76u45);
}
.u59kha3 {
  font-weight: var(--d4g76u46);
}
.u59kha4 {
  --_1d0g9qk0: var(--d4g76u30);
  --_1d0g9qk1: var(--d4g76u31);
  --_1d0g9qk2: var(--d4g76u33);
  --_1d0g9qk3: var(--d4g76u34);
}
.u59kha7 {
  --_1d0g9qk0: var(--d4g76u3a);
  --_1d0g9qk1: var(--d4g76u3b);
  --_1d0g9qk2: var(--d4g76u3d);
  --_1d0g9qk3: var(--d4g76u3e);
}
.u59khaa {
  --_1d0g9qk0: var(--d4g76u3k);
  --_1d0g9qk1: var(--d4g76u3l);
  --_1d0g9qk2: var(--d4g76u3n);
  --_1d0g9qk3: var(--d4g76u3o);
}
.u59khad {
  --_1d0g9qk0: var(--d4g76u3u);
  --_1d0g9qk1: var(--d4g76u3v);
  --_1d0g9qk2: var(--d4g76u3x);
  --_1d0g9qk3: var(--d4g76u3y);
}
.u59khag {
  font-size: var(--d4g76u30);
  line-height: var(--d4g76u31);
}
.u59khah {
  font-size: var(--d4g76u3a);
  line-height: var(--d4g76u3b);
}
.u59khai {
  font-size: var(--d4g76u3k);
  line-height: var(--d4g76u3l);
}
.u59khaj {
  font-size: var(--d4g76u3u);
  line-height: var(--d4g76u3v);
}
.u59khak {
  font-weight: var(--d4g76u5b);
}
.u59khal {
  font-weight: var(--d4g76u5c);
}
.u59kham {
  --_1d0g9qk0: var(--d4g76u47);
  --_1d0g9qk1: var(--d4g76u48);
  --_1d0g9qk2: var(--d4g76u4a);
  --_1d0g9qk3: var(--d4g76u4b);
}
.u59khap {
  --_1d0g9qk0: var(--d4g76u4h);
  --_1d0g9qk1: var(--d4g76u4i);
  --_1d0g9qk2: var(--d4g76u4k);
  --_1d0g9qk3: var(--d4g76u4l);
}
.u59khas {
  --_1d0g9qk0: var(--d4g76u4r);
  --_1d0g9qk1: var(--d4g76u4s);
  --_1d0g9qk2: var(--d4g76u4u);
  --_1d0g9qk3: var(--d4g76u4v);
}
.u59khav {
  --_1d0g9qk0: var(--d4g76u51);
  --_1d0g9qk1: var(--d4g76u52);
  --_1d0g9qk2: var(--d4g76u54);
  --_1d0g9qk3: var(--d4g76u55);
}
html:not(._18zh09qz) .u59kha18 {
  --u59khay: var(--d4g76u17);
  --u59khaz: var(--d4g76u15);
  --u59kha10: var(--d4g76u1b);
  --u59kha11: var(--d4g76u1m);
  --u59kha12: var(--d4g76u1k);
  --u59kha13: var(--d4g76u13);
  --u59kha14: var(--d4g76u19);
  --u59kha15: var(--d4g76u1i);
  --u59kha16: var(--d4g76u1p);
  --u59kha17: var(--d4g76u1d);
}
html:not(._18zh09qz) .u59kha19 {
  --u59khay: var(--d4g76u18);
  --u59khaz: var(--d4g76u16);
  --u59kha10: var(--d4g76u1c);
  --u59kha11: var(--d4g76u1n);
  --u59kha12: var(--d4g76u1l);
  --u59kha13: var(--d4g76u14);
  --u59kha14: var(--d4g76u1a);
  --u59kha15: var(--d4g76u1j);
  --u59kha16: var(--d4g76u1q);
  --u59kha17: var(--d4g76u1f);
}
html._18zh09qz .u59kha1a {
  --u59khay: var(--d4g76u17);
  --u59khaz: var(--d4g76u15);
  --u59kha10: var(--d4g76u1b);
  --u59kha11: var(--d4g76u1m);
  --u59kha12: var(--d4g76u1k);
  --u59kha13: var(--d4g76u13);
  --u59kha14: var(--d4g76u19);
  --u59kha15: var(--d4g76u1i);
  --u59kha16: var(--d4g76u1p);
  --u59kha17: var(--d4g76u1d);
}
html._18zh09qz .u59kha1b {
  --u59khay: var(--d4g76u18);
  --u59khaz: var(--d4g76u16);
  --u59kha10: var(--d4g76u1c);
  --u59kha11: var(--d4g76u1n);
  --u59kha12: var(--d4g76u1l);
  --u59kha13: var(--d4g76u14);
  --u59kha14: var(--d4g76u1a);
  --u59kha15: var(--d4g76u1j);
  --u59kha16: var(--d4g76u1q);
  --u59kha17: var(--d4g76u1f);
}
html:not(._18zh09qz) .u59kha1c,
html:not(._18zh09qz) .u59kha1d,
html:not(._18zh09qz) .u59kha1e,
html:not(._18zh09qz) .u59kha1f {
  --u59kha15: var(--u59khay);
}
html:not(._18zh09qz) .u59kha1g,
html:not(._18zh09qz) .u59kha1h {
  --u59kha15: var(--u59khaz);
}
html:not(._18zh09qz) .u59kha1i {
  --u59kha15: var(--u59kha12);
}
html:not(._18zh09qz) .u59kha1j {
  --u59kha15: var(--u59kha10);
}
html:not(._18zh09qz) .u59kha1k {
  --u59kha15: var(--u59kha11);
}
html._18zh09qz .u59kha1l,
html._18zh09qz .u59kha1m,
html._18zh09qz .u59kha1n,
html._18zh09qz .u59kha1o {
  --u59kha15: var(--u59khay);
}
html._18zh09qz .u59kha1p,
html._18zh09qz .u59kha1q {
  --u59kha15: var(--u59khaz);
}
html._18zh09qz .u59kha1r {
  --u59kha15: var(--u59kha12);
}
html._18zh09qz .u59kha1s {
  --u59kha15: var(--u59kha10);
}
html._18zh09qz .u59kha1t {
  --u59kha15: var(--u59kha11);
}
.u59kha1u {
  color: var(--u59khay);
}
.u59kha1v {
  color: var(--u59khaz);
}
.u59kha1w {
  color: var(--u59kha10);
}
.u59kha1x {
  color: var(--u59kha11);
}
.u59kha1y {
  color: var(--u59kha12);
}
.u59kha1z {
  color: var(--u59kha13);
}
.u59kha20 {
  color: var(--u59kha14);
}
.u59kha21 {
  color: var(--u59kha15);
}
.u59kha22 {
  color: var(--u59kha16);
}
.u59kha23 {
  color: var(--u59kha17);
}
.u59kha24 {
  padding-bottom: calc((var(--d4g76u8) - var(--d4g76u31)) / 2);
  padding-top: calc((var(--d4g76u8) - var(--d4g76u31)) / 2);
}
.u59kha25 {
  padding-bottom: calc((var(--d4g76u8) - var(--d4g76u3b)) / 2);
  padding-top: calc((var(--d4g76u8) - var(--d4g76u3b)) / 2);
}
.u59kha26 {
  padding-bottom: calc((var(--d4g76u8) - var(--d4g76u3l)) / 2);
  padding-top: calc((var(--d4g76u8) - var(--d4g76u3l)) / 2);
}
.u59kha27 {
  padding-bottom: calc((var(--d4g76u8) - var(--d4g76u3v)) / 2);
  padding-top: calc((var(--d4g76u8) - var(--d4g76u3v)) / 2);
}
@media screen and (min-width: 740px) {
  .u59kha4 {
    --_1d0g9qk0: var(--d4g76u35);
    --_1d0g9qk1: var(--d4g76u36);
    --_1d0g9qk2: var(--d4g76u38);
    --_1d0g9qk3: var(--d4g76u39);
  }
  .u59kha7 {
    --_1d0g9qk0: var(--d4g76u3f);
    --_1d0g9qk1: var(--d4g76u3g);
    --_1d0g9qk2: var(--d4g76u3i);
    --_1d0g9qk3: var(--d4g76u3j);
  }
  .u59khaa {
    --_1d0g9qk0: var(--d4g76u3p);
    --_1d0g9qk1: var(--d4g76u3q);
    --_1d0g9qk2: var(--d4g76u3s);
    --_1d0g9qk3: var(--d4g76u3t);
  }
  .u59khad {
    --_1d0g9qk0: var(--d4g76u3z);
    --_1d0g9qk1: var(--d4g76u40);
    --_1d0g9qk2: var(--d4g76u42);
    --_1d0g9qk3: var(--d4g76u43);
  }
  .u59khag {
    font-size: var(--d4g76u35);
    line-height: var(--d4g76u36);
  }
  .u59khah {
    font-size: var(--d4g76u3f);
    line-height: var(--d4g76u3g);
  }
  .u59khai {
    font-size: var(--d4g76u3p);
    line-height: var(--d4g76u3q);
  }
  .u59khaj {
    font-size: var(--d4g76u3z);
    line-height: var(--d4g76u40);
  }
  .u59kham {
    --_1d0g9qk0: var(--d4g76u4c);
    --_1d0g9qk1: var(--d4g76u4d);
    --_1d0g9qk2: var(--d4g76u4f);
    --_1d0g9qk3: var(--d4g76u4g);
  }
  .u59khap {
    --_1d0g9qk0: var(--d4g76u4m);
    --_1d0g9qk1: var(--d4g76u4n);
    --_1d0g9qk2: var(--d4g76u4p);
    --_1d0g9qk3: var(--d4g76u4q);
  }
  .u59khas {
    --_1d0g9qk0: var(--d4g76u4w);
    --_1d0g9qk1: var(--d4g76u4x);
    --_1d0g9qk2: var(--d4g76u4z);
    --_1d0g9qk3: var(--d4g76u50);
  }
  .u59khav {
    --_1d0g9qk0: var(--d4g76u56);
    --_1d0g9qk1: var(--d4g76u57);
    --_1d0g9qk2: var(--d4g76u59);
    --_1d0g9qk3: var(--d4g76u5a);
  }
  .u59kha24 {
    padding-bottom: calc((var(--d4g76u8) - var(--d4g76u36)) / 2);
    padding-top: calc((var(--d4g76u8) - var(--d4g76u36)) / 2);
  }
  .u59kha25 {
    padding-bottom: calc((var(--d4g76u8) - var(--d4g76u3g)) / 2);
    padding-top: calc((var(--d4g76u8) - var(--d4g76u3g)) / 2);
  }
  .u59kha26 {
    padding-bottom: calc((var(--d4g76u8) - var(--d4g76u3q)) / 2);
    padding-top: calc((var(--d4g76u8) - var(--d4g76u3q)) / 2);
  }
  .u59kha27 {
    padding-bottom: calc((var(--d4g76u8) - var(--d4g76u40)) / 2);
    padding-top: calc((var(--d4g76u8) - var(--d4g76u40)) / 2);
  }
}
._1ab1cac6 {
  background: var(--_1ab1cac0);
}
._1ab1cac7 {
  background: var(--_1ab1cac1);
}
._1ab1cac8 {
  background: var(--_1ab1cac2);
}
._1ab1cac9 {
  background: var(--_1ab1cac3);
}
._1ab1caca {
  background: var(--_1ab1cac4);
}
._1ab1cacb {
  background: var(--_1ab1cac5);
}
html:not(._18zh09qz) ._1ab1cacc {
  --_1ab1cac0: var(--d4g76uu);
  --_1ab1cac1: var(--d4g76un);
  --_1ab1cac2: var(--d4g76us);
  --_1ab1cac3: var(--d4g76uf);
  --_1ab1cac4: var(--d4g76uh);
  --_1ab1cac5: var(--d4g76ul);
}
html:not(._18zh09qz) ._1ab1cacd {
  --_1ab1cac0: var(--d4g76uv);
  --_1ab1cac1: var(--d4g76uo);
  --_1ab1cac2: var(--d4g76ut);
  --_1ab1cac3: var(--d4g76ug);
  --_1ab1cac4: var(--d4g76ui);
  --_1ab1cac5: var(--d4g76um);
}
html._18zh09qz ._1ab1cace {
  --_1ab1cac0: var(--d4g76uu);
  --_1ab1cac1: var(--d4g76un);
  --_1ab1cac2: var(--d4g76us);
  --_1ab1cac3: var(--d4g76uf);
  --_1ab1cac4: var(--d4g76uh);
  --_1ab1cac5: var(--d4g76ul);
}
html._18zh09qz ._1ab1cacf {
  --_1ab1cac0: var(--d4g76uv);
  --_1ab1cac1: var(--d4g76uo);
  --_1ab1cac2: var(--d4g76ut);
  --_1ab1cac3: var(--d4g76ug);
  --_1ab1cac4: var(--d4g76ui);
  --_1ab1cac5: var(--d4g76um);
}
._1ab1cacg {
  border-bottom-right-radius: 0 !important;
  border-top-right-radius: 0 !important;
}
._1ab1cach {
  width: var(--d4g76uc);
}
._4ls43x1 {
  text-overflow: ellipsis;
  white-space: nowrap;
}
,
  "main.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main.js.LICENSE.txt": /**
 * @license React
 * react-dom.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react-jsx-runtime.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * scheduler.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
,
}
`;

exports[`sku-webpack-plugin start should start a development server 1`] = `
SCRIPTS: [
  "main.js",
]
CSS: [
  "main.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script
      defer
      src="scripts[0]"
    >
    </script>
    <link
      href="styles[0]"
      rel="stylesheet"
    >
  </head>
  <body>
  </body>
</html>
POST HYDRATE DIFFS: 
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#F7F8FB}
+            html.sprinkles_darkMode__18zh09qz,html.sprinkles_darkMode__18zh09qz body{color-scheme:dark;background:#0E131B}
+      </style>
+      <div class="apacTheme_default__dmx3na0 typography_lightModeTone_light__u59kha18 typography_darkModeTone_dark__u59kha1b">
+        <div class="reset_base__wy3wa10 sprinkles_paddingBottom_gutter_mobile__18zh09q76 sprinkles_paddingTop_gutter_mobile__18zh09q66 sprinkles_paddingLeft_gutter_mobile__18zh09q96 sprinkles_paddingRight_gutter_mobile__18zh09q86 sprinkles_position_relative_mobile__18zh09q5a typography_lightModeTone_light__u59kha18 typography_darkModeTone_dark__u59kha1b sprinkles_background_surface_lightMode__18zh09q32 sprinkles_background_surfaceDark_darkMode__18zh09q35">
+          <span class="reset_base__wy3wa10 sprinkles_display_block_mobile__18zh09q4u typography_fontFamily__u59kha0 typography_fontWeight_regular__u59kha1 typography_tone_neutral__u59kha21 capsize_capsizeStyle__1d0g9qk4 typography_textSize_large__u59khad">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file

`;
